<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/darktheme"
    tools:context=".ui.personalinfo.PerInfoFragment">

    <TextView
        android:id="@+id/aboutme"
        android:layout_width="266dp"
        android:layout_height="61dp"
        android:layout_marginTop="28dp"
        android:fontFamily="casual"
        android:text=" mY PRofile"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        android:background="@drawable/darktheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <TextView
        android:id="@+id/txtstudentno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="350dp"
        android:text="@string/studentno"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:fontFamily="casual"
        android:textStyle="bold"

        android:shadowDx="20"
        android:shadowDy="20"
        android:shadowRadius="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="60dp"
        android:text="@string/name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="casual"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="5"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtstudentno" />

    <TextView
        android:id="@+id/txtviewCousesec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginTop="70dp"
        android:text="@string/block"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="casual"
        android:shadowDx="20"
        android:shadowDy="20"
        android:shadowRadius="5"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtname" />

    <ImageView
        android:id="@+id/imgvprofile"
        android:layout_width="209dp"
        android:layout_height="146dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/darktheme"
        android:src="@drawable/profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutme"
        tools:src="@tools:sample/avatars" />

</androidx.constraintlayout.widget.ConstraintLayout>